--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,9 +1,11 @@
 body {
-    background-color: #282c34; /* Set background color */
-    color: #ffffff; /* Set text color to white */
-    height: 100vh;
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-  
- 
+  background-color: #282c34;
+  color: #ffffff;
+  height: 100vh;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-image: url("https://wallpapercave.com/wp/wp8747461.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat;
+}
